# bandwidth

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  allocation.cpp  allocation.h  bandwidth-avx512.mono  bandwidth-avx512.omp  bandwidth.cpp  bandwidth.h  cron.sh  main.cpp  omp-helper.h  plot.py  simd.h  stream.h  timer.cpp  timer.h
include/: bandwidth.h  optparse  simd.h  stream.h  timer.h  types.h
src/: bandwidth.cpp  main.cpp  timer.cpp
